# arx-interpolation

./: .gitignore  Cargo.toml  README.md  test.http
cpp/: arx_build.bat  build.bat  interpolation.vcxproj  main.cpp
src/: database.rs  entry.rs  entry_functions.rs  error.rs  lib.rs  transaction.rs
src/arx/: acarray.rs  aced.rs  aclocale.rs  acut.rs  adesk.rs  curve.rs  editor.rs  ename.rs  macros.rs  mod.rs  object.rs  resbuf.rs  rlname.rs  ssname.rs  string.rs  transaction.rs  xdata.rs
src/arx/acad_app/: mod.rs
src/arx/acdb/: curve.rs  database.rs  handle.rs  mod.rs  object.rs  object_id.rs
src/arx/acgi/: drawable.rs  mod.rs
src/arx/acrx/: mod.rs  object.rs
src/commands/: mod.rs
src/functions/: mod.rs
src/tables/: cmd.rs  func.rs  mod.rs
