[package]
name = "rust-arx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
utf16_lit = "2.0"
thiserror = "1.0"
sys = "*"
hex = "0.4"
clipboard-win = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp =  "0.8"
rmp-serde = "0.15"
rmpv = "1.0"
serde_yaml = "0.8"
evalexpr = "6.4"
bytes = "1"
derive_more = "0.99.16"
async-trait = "0.1.51"
lazy_static = "1.4.0"
makima_spline = "1.1.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

